--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ h1{
         background-color:white;
         color:black;
         width:300px;
+        height:700px;
         padding:20px;
         border-radius:25px;
         position:absolute;
